SnakeCharmR 1.0.7
=================
Should now compile on Windows using the Rtools Python libraries or the standard Python
package. Many thanks to Matthew Fidler (https://github.com/mattfidler), his help was invaluable
in helping implement and test this.

Added Appveyor tests for the Windows build.


SnakeCharmR 1.0.6
=================
Fixed compilation on Python 3, fixing https://github.com/asieira/SnakeCharmR/issues/33. Thanks to https://github.com/lfdmotta for reporting this.

Updated Travis tests to cover Python 2 and 3, and also current and devel versions of R.

Startup message will now include contents of Python `sys.version` information.


SnakeCharmR 1.0.5
=================
Cleaned up configure.ac and src/Makevars.in to remove unnecessary steps inherited from RPython code.

Fixed issue with logo image in README file in CRAN page.

Updated versions of package dependencies.


SnakeCharmR 1.0.4
=================
Fixed https://github.com/asieira/SnakeCharmR/issues/24. Thanks to David Severski (@dseverski)
for reporting this.


SnakeCharmR 1.0.3
=================
Took measures to ensure SnakeCharmR will work properly on systems where the native encoding is not UTF-8:

* Use Python API to check if variable is str/bytes or unicode and handling things correctly. In particular, when we read Python unicode values we flag the resulting R string as UTF-8 since that’s what we Python C API we are using will return;

* Ensure that Python code being executed is converted to UTF-8 and that the Python interpreter is made aware of that according to PEP 263.


SnakeCharmR 1.0.2
=================
Fixed linking and building errors on some platforms (such as Amazon Linux) by updating the
autoconf file to use the correct C++ compiler preferred by R.


SnakeCharmR 1.0.1
=================
Fixed handling of NULL values in arguments, including a workaround for jeroenooms/jsonlite#130 which was causing inconsistencies.


SnakeCharmR 1.0.0
=================
Initial release.