@@ -1,6 +1,6 @@
 Package: SnakeCharmR
 Version: 1.0.7
-Date: 2017-04-02
+Date: 2017-10-05
 Title: R and Python Integration
 Author: Alexandre Sieira, forked off of rPython by Carlos J. Gil Bellosta
 Maintainer: Alexandre Sieira <alexandre.sieira@gmail.com>
@@ -13,7 +13,8 @@ Imports:
     utils
 License: GPL-2
 SystemRequirements: Python (>= 2.7) and Python headers and libraries
-    (See the INSTALL file)
+    (See the README.md file)
+OS_type: unix
 URL: https://github.com/asieira/SnakeCharmR
 BugReports: https://github.com/asieira/SnakeCharmR/issues
 Suggests:
