@@ -38,5 +38,9 @@
 }
 
 .py.fromJSON <- function(x, json.options = list()) {
+  if (is.raw(x)) {
+    x <- rawConnection(x)
+    on.exit(close(x))
+  }
   do.call(fromJSON, c(json.options, list(txt = x)))
 }
