@@ -47,7 +47,8 @@ py.exec <- function(code, stopOnException = TRUE) {
 
   # try to read the stored exception
   exception = rcpp_Py_get_var("_SnakeCharmR_exception")
-  if (!is.na(exception)) {
+  if (length(exception) != 0) {
+    exception <- rawToChar(exception)
     py.rm("_SnakeCharmR_exception")
     if (stopOnException)
       stop(exception)
